# codex-master

./: .app.json  .gitignore  .mcp.json  README.md  codex-agent-pool.json  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
docs/: agent-pool.md  auth-copy.md
examples/: codex-agent-pool.json
schemas/: codex-agent-pool.schema.json
scripts/: install-agent-pool
skills/codex-master-fleet/: SKILL.md
src/codex_master/: __init__.py  server.py
systemd/user/: codex-master-watchdog.service  codex-master-watchdog.timer
tests/: test_server.py
