[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-master"
version = "0.1.16"
description = "Local MCP wrapper for controlling two isolated Codex CLI instances via tmux"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codex-master-mcp = "codex_master.server:main"

[tool.setuptools.packages.find]
where = ["src"]
